--- a/Omal/Views/GruppoMetadatiProdottoDetailV.xaml
+++ b/Omal/Views/GruppoMetadatiProdottoDetailV.xaml
@@ -9,7 +9,7 @@
                 <StackLayout BackgroundColor="#EAEAEA">
                     <Label Margin="5" Style="{StaticResource Titolo}" FontSize="20" Text="{Binding CurProdotto.nome}"  HorizontalOptions="Fill" HorizontalTextAlignment="Center" />
                 </StackLayout>
-            <WebView VerticalOptions="FillAndExpand" Navigating="Handle_Navigating" >
+            <WebView Margin="-5" VerticalOptions="FillAndExpand" Navigating="Handle_Navigating" >
                 <WebView.Source>
                     <HtmlWebViewSource Html="{Binding ContentHtml}" />
                 </WebView.Source>
