--- a/Omal/Views/ConfigurationV.xaml
+++ b/Omal/Views/ConfigurationV.xaml
@@ -22,7 +22,7 @@
                     <RowDefinition />
                 </Grid.RowDefinitions>
                 <Label Grid.Row="0" Grid.Column="0" Text="{Binding TitoloAggiornaCatalogo, Converter={StaticResource UpperCaseConverter}}" Style="{StaticResource Titolo}" />
-                <Label Grid.Row="1"  Text="{Binding LastUpdate}" Grid.Column="0" VerticalOptions="Center"  HorizontalOptions="EndAndExpand"/>
+                <Label Grid.Row="1" LineBreakMode="WordWrap" Text="{Binding LastUpdate}" Grid.Column="0" VerticalOptions="Center"  HorizontalOptions="EndAndExpand"/>
                 <Button Grid.Row="0" Grid.RowSpan="2" VerticalOptions="Center" Style="{StaticResource Azzurro}" Grid.Column="1" IsVisible="{Binding IsRunning, {Converter InverseBooleanConverter}" Command="{Binding UpdateDbCommand}" HorizontalOptions="EndAndExpand" Text="{Binding Aggiorna, Converter={StaticResource UpperCaseConverter}}" />
             </Grid>
 <TableView Intent="Settings">
