--- a/Omal/Views/SearchProductV.xaml
+++ b/Omal/Views/SearchProductV.xaml
@@ -17,7 +17,7 @@
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
         <StackLayout Grid.Row="0" Orientation="Vertical" BackgroundColor="#EAEAEA">
-            <Label Margin="5" Style="{StaticResource Titolo}" FontSize="20" Text="{Binding CurProdotto.nome}"  HorizontalOptions="Fill" HorizontalTextAlignment="Center" />
+            <Label Margin="5" Style="{StaticResource Titolo}" FontSize="18" Text="{Binding CurProdotto.nome}"  HorizontalOptions="Fill" HorizontalTextAlignment="Center" />
         </StackLayout>
         <StackLayout Grid.Row="1" Orientation="Vertical" BackgroundColor="#FFFFFF">
                     <Grid>
@@ -40,10 +40,10 @@
         </StackLayout>
         <StackLayout Grid.Row="2" Orientation="Vertical" BackgroundColor="#EAEAEA">
             <Label Margin="0,10,0,0" HorizontalTextAlignment="Center" Style="{StaticResource Titolo}" Text="{Binding StrTrovaArticolo}" />
-            <CControls:CualevaPicker BackgroundColor="White" Margin="5,0,5,0" Title="{Binding DescrizionePicker1}" IsVisible="{Binding Picker1IsVisible}" HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedPicker1}" ItemsSource="{Binding Picker1}"  />
-            <CControls:CualevaPicker BackgroundColor="White" Margin="5,0,5,0" Title="{Binding DescrizionePicker2}" IsVisible="{Binding Picker2IsVisible}" HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedPicker2}" ItemsSource="{Binding Picker2}"  />
-            <CControls:CualevaPicker BackgroundColor="White" Margin="5,0,5,0" Title="{Binding DescrizionePicker3}" IsVisible="{Binding Picker3IsVisible}" HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedPicker3}" ItemsSource="{Binding Picker3}"  />
-            <CControls:CualevaPicker BackgroundColor="White" Margin="5,0,5,0" Title="{Binding DescrizionePicker4}" IsVisible="{Binding Picker4IsVisible}"  HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedPicker4}" ItemsSource="{Binding Picker4}"  />
+            <CControls:CualevaPicker  Margin="5,0,5,0" Title="{Binding DescrizionePicker1}" IsVisible="{Binding Picker1IsVisible}" HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedPicker1}" ItemsSource="{Binding Picker1}"  />
+            <CControls:CualevaPicker  Margin="5,0,5,0" Title="{Binding DescrizionePicker2}" IsVisible="{Binding Picker2IsVisible}" HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedPicker2}" ItemsSource="{Binding Picker2}"  />
+            <CControls:CualevaPicker  Margin="5,0,5,0" Title="{Binding DescrizionePicker3}" IsVisible="{Binding Picker3IsVisible}" HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedPicker3}" ItemsSource="{Binding Picker3}"  />
+            <CControls:CualevaPicker  Margin="5,0,5,0" Title="{Binding DescrizionePicker4}" IsVisible="{Binding Picker4IsVisible}"  HorizontalOptions="Fill" ItemDisplayBinding="{Binding Value}" SelectedItem="{Binding SelectedPicker4}" ItemsSource="{Binding Picker4}"  />
             <StackLayout Margin="5" HorizontalOptions="Center"  Orientation="Horizontal">
                 <Button IsVisible="{Binding Picker2IsVisible}" Text="{Binding StrBtnPulisci, Converter={StaticResource UpperCaseConverter}}" Command="{Binding PulisciCommand}" />                
                 <Button Text="{Binding BtnTrova, Converter={StaticResource UpperCaseConverter}}" Style="{StaticResource Azzurro}" Command="{Binding CercaArticoliCommand}" IsVisible="{Binding MoreThanOneAtrticle}" />                
